# XAIGUIFORMER_MLReproducibility

./: .gitignore  .gitmodules  Analyse critique du projet.docx  README.md  analyze_tdbrain_diagnoses.py  architecture.txt  config.py  convert_xls_to_csv.py  create_tdbrain_dataset_90.py  debug_dimensions.py  debug_explainer.py  debug_predictions.py  debug_train.py  fix_gender.py  logger.py  main.py  main_timeseries.py  migrate_to_poetry.py  pyproject.toml  requirements.txt  test_explainer_validation.py  test_multirocket.py  test_train.py  test_training.py  ~$alyse critique du projet.docx
all_scripts/: EEGBenchmarkDataset.py  README.md  TDBRAIN_model.yaml  TDBRAIN_preprocess.yaml  TUAB_model.yaml  XAIguiFormer.py  activation.py  connectome_encoder.py  environment.yml  explainer_wrapper.py  positional_encoding_wrapper.py  preprocessing.py  transform.py  transform_dataformAndlabel.py
configs/: TUAB_preprocess.yaml  base.yaml  tdbrain_config.yaml
data/: convert_xls_to_csv.py  create_tdbrain_dataset_90.py
data/TDBRAIN/: elec_loc.csv
data/TDBRAIN/TD-BRAIN-SAMPLE/derivatives/: dataset_description.json
data/TDBRAIN/TDBRAIN-dataset-derivatives/: dataset_description.json
data/TDBRAIN/connectome/sub-19684666/ses-1/: ses-1_COH+WPLI_beta.npy  ses-1_COH+WPLI_delta.npy  ses-1_COH+WPLI_gamma.npy  ses-1_COH+WPLI_high_alpha.npy  ses-1_COH+WPLI_high_beta.npy  ses-1_COH+WPLI_low_alpha.npy  ses-1_COH+WPLI_low_beta.npy  ses-1_COH+WPLI_mid_beta.npy  ses-1_COH+WPLI_theta.npy  ses-1_COH+WPLI_theta_beta_ratio.npy  ses-1_coh_beta.npy  ses-1_coh_delta.npy  ses-1_coh_gamma.npy  ses-1_coh_high_alpha.npy  ses-1_coh_high_beta.npy  ses-1_coh_low_alpha.npy  ses-1_coh_low_beta.npy  ses-1_coh_mid_beta.npy  ses-1_coh_theta.npy  ses-1_coh_theta_beta_ratio.npy  ses-1_wpli_beta.npy  ses-1_wpli_delta.npy  ses-1_wpli_gamma.npy  ses-1_wpli_high_alpha.npy  ses-1_wpli_high_beta.npy  ses-1_wpli_low_alpha.npy  ses-1_wpli_low_beta.npy  ses-1_wpli_mid_beta.npy  ses-1_wpli_theta.npy  ses-1_wpli_theta_beta_ratio.npy  sub-19684666_ses-1_coh_beta.npy  sub-19684666_ses-1_coh_delta.npy  sub-19684666_ses-1_coh_gamma.npy  sub-19684666_ses-1_coh_high_alpha.npy  sub-19684666_ses-1_coh_high_beta.npy  sub-19684666_ses-1_coh_low_alpha.npy  sub-19684666_ses-1_coh_low_beta.npy  sub-19684666_ses-1_coh_mid_beta.npy  sub-19684666_ses-1_coh_theta.npy  sub-19684666_ses-1_coh_theta_beta_ratio.npy  (+10 more)
data/TDBRAIN/connectome/sub-19731853/ses-1/: ses-1_COH+WPLI_beta.npy  ses-1_COH+WPLI_delta.npy  ses-1_COH+WPLI_gamma.npy  ses-1_COH+WPLI_high_alpha.npy  ses-1_COH+WPLI_high_beta.npy  ses-1_COH+WPLI_low_alpha.npy  ses-1_COH+WPLI_low_beta.npy  ses-1_COH+WPLI_mid_beta.npy  ses-1_COH+WPLI_theta.npy  ses-1_coh_beta.npy  (+40 more)
data/TDBRAIN/raw/: dataset_description.json  participants.json  participants.tsv
data/TDBRAIN/tokens/: connectome_tokens.pkl  connectomes_graphs.pkl  xai_graphs.pkl
data/TDBRAIN_participants_V2_data/: TDBRAIN_participants_V2.json  TDBRAIN_replication_template_V2.xlsx
data/connectomes/s00/: Alpha_corr.npy  Beta_corr.npy  Delta_corr.npy  Gamma_corr.npy  Theta_corr.npy
data/dataset/TDBRAIN/phenotypic_participants_data/: TDBRAIN_participants_V2.xlsx
data/preprocessing/: connectome_builder.py  eeg_preprocessing.py
data/tokens/: connectome_tokens.pkl
eeg-analysis/: pyproject.toml
models/: xaiguiformer_timeseries.py
modules/: explainer.py  gnn.py  gnn_wrapper.py  mlp.py  multirocket_tokenizer.py  transformer.py
reunions/: XAIGUIFORMER_reu1.pptx
scripts/: ablation_study.py  evaluate.py  plot_attention_maps.py  train.py
src/: TDBRAIN_exploration.ipynb  config.py  dataset_viz.ipynb
src/model/: connectome_tokenizer.py  dRoFE_embedding.py  evaluator.py  explainers.py  gnn.py  losses.py  trainer.py  transformer_used_two_times.py  vanilla_transformer.py  xai_guided_transformer.py  xaiguiformer_pipeline.py
src/preprocessing/: aggregate_tokens.py  connectome_builder.py  connectome_tokenizer.py  eeg_preprocessing.py
src/utils/: preprocessing.py
src_explained/: dRoFE_embedding_explained.md  explainers_explained.md  trainer_explained.md  trainer_explained_GITHUB.md  vanilla_transformer_explained.md  vanilla_transformer_explained_GITHUB.md  xai_guided_loss_explained.md  xai_guided_loss_explained_GITHUB.md  xai_guided_transformer_explained.md
src_info/: dRoFE_embedding_explained_GITHUB.md  explainers_explained.md  trainer_explained_GITHUB.md  vanilla_transformer_explained_GITHUB.md  xai_guided_loss_explained_GITHUB.md  xai_guided_transformer_explained_GITHUB.md
utils/: constructFC.py  data_transformer_tensor_timeseries.py  eval_metrics.py  preprocessing_timeseries.py  visualizer.py
(+1013 files in other folders)
