[tool.poetry]
name = "xaiguiformer-mlreproducibility"
version = "0.1.0"
description = ""
authors = ["Robin Guiavarch <robin.guiavarch@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0,<0.23.0"
torchaudio = ">=2.0.0,<3.0.0"
torch-geometric = ">=2.4.0,<3.0.0"  # ✅ AJOUTÉ : nécessaire pour PyG
pytorch-lightning = ">=2.0.0,<3.0.0"

numpy = ">=1.24.0,<2.0.0"
pandas = ">=2.0.0,<3.0.0"
scikit-learn = ">=1.3.0,<2.0.0"
matplotlib = ">=3.7.0,<4.0.0"
seaborn = ">=0.12.0,<0.14.0"
scipy = ">=1.10.0,<2.0.0"

mne = ">=1.5.0,<2.0.0"
mne-connectivity = ">=0.6.0,<0.8.0"
mne-icalabel = ">=0.6.0,<0.8.0"  # ✅ SPÉCIFIQUE : version récente compatible
pyprep = ">=0.4.0,<0.5.0"  # ✅ AJOUTÉ : pour preprocessing PREP

captum = ">=0.6.0,<0.8.0"  # ✅ AJOUTÉ : pour DeepLIFT explainer
yacs = ">=0.1.8,<0.2.0"    # ✅ AJOUTÉ : pour config.py

tqdm = ">=4.65.0,<5.0.0"
networkx = ">=3.0.0,<4.0.0"
joblib = ">=1.3.0,<2.0.0"

wandb = ">=0.15.0,<0.20.0"
tensorboard = ">=2.14.0,<3.0.0"

hydra-core = ">=1.3.0,<2.0.0"
omegaconf = ">=2.3.0,<3.0.0"

nbformat = ">=5.7.0,<6.0.0"
ipykernel = ">=6.25.0,<7.0.0"
plotly = ">=5.15.0,<7.0.0"
jupyter = "^1.1.1"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
einops = "^0.8.1"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"