[tool.poetry]
name = "xaiguiformer-timeseries"
version = "0.1.0"
description = "XAI guided transformer for brain disorder identification using time series"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Core ML/DL frameworks
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
# PyTorch ecosystem
torch-geometric = "^2.3.1"
timm = "^0.9.5"
torchmetrics = "^1.1.1"
# Scientific computing
numpy = "^1.25.2"
scipy = "^1.11.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
# Visualization
matplotlib = "^3.7.1"
# Configuration management
yacs = "^0.1.8"
# Progress bars
tqdm = "^4.65.0"
# Explainability
captum = "^0.6.0"
# Tensor operations
einops = "^0.6.1"
# Logging and monitoring
tensorboard = "^2.12.1"
# Utilities
pyyaml = "^6.0"
# EEG processing (will need to be installed separately or from conda-forge)
# mne = {version = "^1.5.0", optional = true}
# mne-connectivity = {version = "^0.5.0", optional = true}
# mne-icalabel = {version = "^0.4.0", optional = true}
openpyxl = "^3.1.5"
bytecode = "^0.16.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipython = "^8.15.0"
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3